name: reheat
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
executable reheat
    build-depends: QuickCheck -any, base -any, directory -any,
                   text -any, vty -any, vty-ui -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Task
 
test-suite test-reheat
    build-depends: QuickCheck -any, base -any, directory -any,
                   text -any, vty -any, vty-ui -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
test-suite test-task
    build-depends: QuickCheck -any, base -any, directory -any,
                   text -any, vty -any, vty-ui -any
    type: exitcode-stdio-1.0
    main-is: Task.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src